# cmake-examples

./: note.md
01_from_executable_to_lib/: CMakeLists.txt  Message.cpp  helloworld.cpp
02_check_environment/: CMakeLists.txt  helloworld.cpp
